--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.4",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.10",
