--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "laravel-mix-standalone-w-tailwind",
-  "version": "1.0.0",
-  "description": "",
-  "main": "tailwind.config.js",
-  "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NormanHuth/laravel-mix-standalone-w-tailwind.git"
-  },
-  "author": "Norman Huth <norman@huth.it>",
-  "license": "MIT",
-  "homepage": "https://github.com/NormanHuth/laravel-mix-standalone-w-tailwind",
-  "dependencies": {
-    "tailwindcss": "^2.0.3"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "laravel-mix": "^6.0.13",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "vue-template-compiler": "^2.6.12"
-  }
+    "name": "laravel-mix-standalone-w-tailwind",
+    "version": "1.0.0",
+    "description": "",
+    "main": "tailwind.config.js",
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/NormanHuth/laravel-mix-standalone-w-tailwind.git"
+    },
+    "author": "Norman Huth <norman@huth.it>",
+    "license": "MIT",
+    "homepage": "https://github.com/NormanHuth/laravel-mix-standalone-w-tailwind",
+    "dependencies": {
+        "tailwindcss": "^3.0.11"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.39",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.46.0",
+        "sass-loader": "^12.4.0"
+    }
 }
