--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/css/app.css": "/css/app.css?id=df7b44a07d07c54c743c",
-    "/js/app.js": "/js/app.js?id=d41d8cd98f00b204e980"
+    "/css/app.css": "/css/app.css?id=f308a328981d67fd834eca8d14194ad7",
+    "/js/app.js": "/js/app.js?id=d41d8cd98f00b204e9800998ecf8427e"
 }
